chnage in logoss

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
             }'>
                                 <div class="#">
     <a href="https://doorstepsupport.com/" target="_blank">
-        <img src="assets/images/resources/post_barndin-02.png"
+        <img src="assets/images/resources/4.png"
              alt="logo"
              style="height:100px; width:200px; object-fit:contain;">
     </a>
@@ -474,15 +474,15 @@
 
 <div class="#">
     <a href="https://ctsofts.com/" target="_blank">
-        <img src="assets/images/resources/CTSOFTS.png"
+        <img src="assets/images/resources/6.png"
              alt="logo"
              style="height:100px; width:200px; object-fit:contain;">
     </a>
 </div>
 
 <div class="#">
-    <a href="https://example.com" target="_blank">
-        <img src="assets/images/resources/2 (1).png"
+    <a href="https://professionalmanpowerservices.com/" target="_blank">
+        <img src="assets/images/resources/7.png"
              alt="logo"
              style="height:100px; width:200px; object-fit:contain;">
     </a>
@@ -491,7 +491,7 @@
 
 <div class="#">
     <a href="https://memonhygiene.com/" target="_blank">
-        <img src="assets/images/resources/MEMON-HYG2-150x59.webp"
+        <img src="assets/images/resources/8.png"
              alt="logo"
              style="height:100px; width:200px; object-fit:contain;">
     </a>
@@ -499,7 +499,78 @@
 
 <div class="#">
     <a href="https://equipstermachines.com/" target="_blank">
-        <img src="assets/images/resources/Screenshot 2026-02-09 220028.png"
+        <img src="assets/images/resources/5.png"
+             alt="logo"
+             style="height:100px; width:200px; object-fit:contain;">
+    </a>
+</div>
+
+<div class="#">
+    <a href="http://karachicleaners.com/" target="_blank">
+        <img src="assets/images/resources/1.png"
+             alt="logo"
+             style="height:100px; width:200px; object-fit:contain;">
+    </a>
+</div>
+
+<div class="#">
+    <a href="#" target="_blank">
+        <img src="assets/images/resources/2.png"
+             alt="logo"
+             style="height:100px; width:200px; object-fit:contain;">
+    </a>
+</div>
+
+<div class="#">
+    <a href="#" target="_blank">
+        <img src="assets/images/resources/9.png"
+             alt="logo"
+             style="height:100px; width:200px; object-fit:contain;">
+    </a>
+</div>
+
+<div class="#">
+    <a href="#" target="_blank">
+        <img src="assets/images/resources/10.png"
+             alt="logo"
+             style="height:100px; width:200px; object-fit:contain;">
+    </a>
+</div>
+<div class="#">
+    <a href="https://aktovis.com/" target="_blank">
+        <img src="assets/images/resources/11.png"
+             alt="logo"
+             style="height:100px; width:200px; object-fit:contain;">
+    </a>
+</div>
+
+<div class="#">
+    <a href="#" target="_blank">
+        <img src="assets/images/resources/12.png"
+             alt="logo"
+             style="height:100px; width:200px; object-fit:contain;">
+    </a>
+</div>
+
+<div class="#">
+    <a href="#" target="_blank">
+        <img src="assets/images/resources/13.png"
+             alt="logo"
+             style="height:100px; width:200px; object-fit:contain;">
+    </a>
+</div>
+
+<div class="#">
+    <a href="#" target="_blank">
+        <img src="assets/images/resources/14.png"
+             alt="logo"
+             style="height:100px; width:200px; object-fit:contain;">
+    </a>
+</div>
+
+<div class="#">
+    <a href="#" target="_blank">
+        <img src="assets/images/resources/15.png"
              alt="logo"
              style="height:100px; width:200px; object-fit:contain;">
     </a>
